<resources>
    <string name="app_name">MovieFilms</string>
    <string name="search">Search...</string>
    <string name="search_movies">Search Movies</string>
    <string name="saved_movies">Saved Movies</string>
    <string name="all_movies">All Movies</string>
    <string name="poster_of_film">Poster of Film</string>
    <string name="retry">Retry</string>
    <string name="favourite">favourite</string>
    <string name="movie_image">Movie Image</string>
    <string name="image_adult">image adult</string>
    <string name="watch_trailer">Watch Trailer</string>
    <string name="overview">Overview:</string>
    <string name="you_haven_t_got_saved_movies_yet">You haven\'t got saved movies yet</string>
    <string name="please_check_your_internet_connection">Please, check your internet connection</string>
    <string name="something_went_wrong">Something went wrong</string>
</resources>