<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black">

        <TextView
            android:id="@+id/detailedMovieTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="12dp"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detailedImageView" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="180dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/favourite"
            android:src="@drawable/ic_favorite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/detailedImageView"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/movie_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageAdult"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
            android:adjustViewBounds="true"
            android:background="@color/grey"
            android:visibility="visible"
            android:contentDescription="@string/image_adult"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detailedMovieTitle"
            app:srcCompat="@drawable/adult" />

        <RatingBar
            android:id="@+id/ratingBar"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="12dp"
            android:numStars="10"
            android:rating="8"
            android:theme="@style/MyRatingBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textGenres" />

        <TextView
            android:id="@+id/textTotalVotes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ratingBar" />

        <Button
            android:id="@+id/buttonTrailer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/watch_trailer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textTotalVotes" />

        <TextView
            android:id="@+id/textGenres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginTop="20dp"
            android:text="Criminal, comedy, documental"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detailedMovieTitle" />

        <TextView
            android:id="@+id/textOverview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="12dp"
            android:text="@string/overview"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonTrailer" />

        <TextView
            android:id="@+id/textOverviewText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="12dp"
            android:paddingBottom="30dp"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textOverview" />

        <TextView
            android:id="@+id/textRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/ratingBar"
            app:layout_constraintTop_toBottomOf="@+id/textGenres" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>